--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "router": "^1.3.8",
     "vue": "^3.2.13",
+    "vue-router": "^4.3.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
