--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "router": "^1.3.8",
+    "sweetalert2": "^11.10.8",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2",
     "vuex": "^4.1.0"
